Implemented infrastructure layer and execute EF migration

--- a/Cdn.Freelance.Domain/Cdn.Freelance.Domain.csproj
+++ b/Cdn.Freelance.Domain/Cdn.Freelance.Domain.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
+    <InternalsVisibleTo Include="Cdn.Freelance.Infrastructure" />
     <InternalsVisibleTo Include="Cdn.Freelance.Domain.Tests" />
   </ItemGroup>
 </Project>
