--- a/Cdn.Freelance.Infrastructure/Cdn.Freelance.Infrastructure.csproj
+++ b/Cdn.Freelance.Infrastructure/Cdn.Freelance.Infrastructure.csproj
@@ -7,7 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Cdn.Freelance.Domain\Cdn.Freelance.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
+    <InternalsVisibleTo Include="Cdn.Freelance.Api" />
+    <InternalsVisibleTo Include="Cdn.Freelance.Infrastructure.Tests" />
   </ItemGroup>
 
 </Project>
