Removed sensitive setting

--- a/Cdn.Freelance.Api/appsettings.Development.json
+++ b/Cdn.Freelance.Api/appsettings.Development.json
@@ -6,6 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "FreelanceDatabase": "Host=localhost;Port=5432;Database=freelance;User Id=postgres;Password=gambit123;"
-  } 
+    "FreelanceDatabase": ""
+  },
+  "Okta": {
+    "OktaDomain": "https://${yourOktaDomain}",
+    "ClientId": "${clientId}",
+    "ClientSecret": "${clientSecret}",
+    "AuthorizationServerId": "default"
+  }
 }
