--- a/Cdn.Freelance.Api/appsettings.Development.json
+++ b/Cdn.Freelance.Api/appsettings.Development.json
@@ -9,9 +9,8 @@
     "FreelanceDatabase": ""
   },
   "Okta": {
-    "OktaDomain": "https://${yourOktaDomain}",
-    "ClientId": "${clientId}",
-    "ClientSecret": "${clientSecret}",
-    "AuthorizationServerId": "default"
+    "OktaDomain": "https://dev-50457353.okta.com",
+    "AuthorizationServerId": "default",
+    "Audience": "api://default"
   }
 }
