Implement correlation ID and Nlog

--- a/Cdn.Freelance.Api/appsettings.Development.json
+++ b/Cdn.Freelance.Api/appsettings.Development.json
@@ -5,6 +5,49 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "NLog": {
+    "internalLogLevel": "Info",
+    "internalLogFile": "${basedir}/logs/nlog.log",
+    "extensions": [
+      {
+        "assembly": "NLog.Extensions.Logging"
+      },
+      {
+        "assembly": "Gambit.Service.Logs.NLog"
+      }
+    ],
+    "targets": {
+      ////Uncomment if you expect to log in file.
+      //"file": {
+      //  "type": "File",
+      //  "fileName": "${basedir}/logs/${shortdate}.log",
+      //  "layout": "${longdate}|${hostname}|Cdn.Freelance|${aspnet-request-headers:HeaderNames=X-Correlation-ID:ValuesOnly=true}|${uppercase:${level}}|${message} ${exception:format=tostring}"
+      //},
+      "console": {
+        "type": "ColoredConsole",
+        "layout": "${longdate}|${hostname}|Cdn.Freelance|${correlation-id}|${uppercase:${level}}|${callsite:includeNamespace=true:fileName=false:cleanNamesOfAsyncContinuations=true:cleanNamesOfAnonymousDelegates=true}|${message} ${exception:format=tostring}"
+      }
+    },
+    "rules": [
+      {
+        "logger": "System.*",
+        "finalMinLevel": "Warn"
+      },
+      {
+        "logger": "Microsoft.*",
+        "finalMinLevel": "Warn"
+      },
+      {
+        "logger": "Microsoft.Hosting.Lifetime*",
+        "finalMinLevel": "Info"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Info",
+        "writeTo": "console"
+      }
+    ]
+  },
   "ConnectionStrings": {
     "FreelanceDatabase": ""
   },
